add pageing and post crud

--- a/JustBlog.WebApp/Views/Shared/_Layout.cshtml
+++ b/JustBlog.WebApp/Views/Shared/_Layout.cshtml
@@ -33,12 +33,17 @@
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Entity Framework</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">MVC</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" asp-controller="post" asp-action="Index">Manage Post</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" >Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    @RenderBody()
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
     <div class="col-lg-3 mx-auto">
         @*@Html.Partial("_PartialAboutCard", "Home")*@
     </div>
