--- a/JustBlog.WebApp/Areas/Blog/Views/Post/Create.cshtml
+++ b/JustBlog.WebApp/Areas/Blog/Views/Post/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model JustBlog.ViewModels.EntityViewModels.PostVM
+﻿@model JustBlog.Models.Entities.Post
 
 @{
     ViewData["Title"] = "Create";
@@ -9,7 +9,7 @@
 <h4>Post</h4>
 <hr />
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -24,23 +24,33 @@
             </div>
             <div class="form-group">
                 <label asp-for="ShortDescription" class="control-label"></label>
-                <textarea asp-for="ShortDescription" class="form-control" rows="5" cols="50"> </textarea>
+                <input asp-for="ShortDescription" class="form-control" />
                 <span asp-validation-for="ShortDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PostContent" class="control-label"></label>
-                <textarea asp-for="PostContent" class="form-control"  rows="8" cols="50" ></textarea>
+                <input asp-for="PostContent" class="form-control" />
                 <span asp-validation-for="PostContent" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Published" /> @Html.DisplayNameFor(model => model.Published)
                 </label>
-            </div>         
-            @*<div class="form-group">
+            </div>
+            <div class="form-group">
+                <label asp-for="PostedOn" class="control-label"></label>
+                <input asp-for="PostedOn" class="form-control" />
+                <span asp-validation-for="PostedOn" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Modified" class="control-label"></label>
+                <input asp-for="Modified" class="form-control" />
+                <span asp-validation-for="Modified" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
-            </div>*@
+                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
