--- a/JustBlog.WebApp/Views/Shared/_Layout.cshtml
+++ b/JustBlog.WebApp/Views/Shared/_Layout.cshtml
@@ -34,11 +34,13 @@
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Entity Framework</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">MVC</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" asp-controller="admin/blog/post" asp-action="Index">Manage Post</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" >Contact</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4">Contact</a></li>
+                    @await Html.PartialAsync("_LoginPartial")
                 </ul>
             </div>
         </div>
     </nav>
+  
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
