--- a/JustBlog.WebApp/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/JustBlog.WebApp/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,11 @@
-﻿@page
+﻿@page  "/AccessDenied.html"
 @model AccessDeniedModel
 @{
     ViewData["Title"] = "Access denied";
+    Layout = "_Layout";
 }
 
-<header>
+
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
-</header>
+
