--- a/JustBlog.WebApp/Areas/Blog/Views/Post/Create.cshtml
+++ b/JustBlog.WebApp/Areas/Blog/Views/Post/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    var list = ViewData["categories"] as SelectList;
 }
 
 <h1>Create</h1>
@@ -13,12 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class="form-control" asp-items="list"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label">Title</label>
-                <input asp-for="Title" class="form-control" />
+                <textarea cols="2" asp-for="Title" class="form-control" ></textarea>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,12 +29,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="ShortDescription" class="control-label"></label>
-                <input asp-for="ShortDescription" class="form-control" />
+                <textarea cols="4" asp-for="ShortDescription" class="form-control" ></textarea>
                 <span asp-validation-for="ShortDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PostContent" class="control-label"></label>
-                <input asp-for="PostContent" class="form-control" />
+                <textarea cols="6" asp-for="PostContent" class="form-control" ></textarea>
                 <span asp-validation-for="PostContent" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
