--- a/JustBlog.WebApp/Areas/Blog/Views/Post/Edit.cshtml
+++ b/JustBlog.WebApp/Areas/Blog/Views/Post/Edit.cshtml
@@ -2,20 +2,25 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var list = ViewData["categories"] as SelectList;
 }
 
-<h1>Edit</h1>
+<h1>Edit Post</h1>
 
-<h4>Post</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId" class="form-control" asp-items="list"></select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <textarea cols="2" asp-for="Title" class="form-control" ></textarea>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -25,12 +30,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="ShortDescription" class="control-label"></label>
-                <input asp-for="ShortDescription" class="form-control" />
+                <textarea cols="4" asp-for="ShortDescription" class="form-control" ></textarea>
                 <span asp-validation-for="ShortDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PostContent" class="control-label"></label>
-                <input asp-for="PostContent" class="form-control" />
+                <textarea cols="6" asp-for="PostContent" class="form-control" ></textarea>
                 <span asp-validation-for="PostContent" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -48,11 +53,7 @@
                 <input asp-for="Modified" class="form-control" />
                 <span asp-validation-for="Modified" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
