--- a/JustBlog.WebApp/Areas/Blog/Views/Post/Index.cshtml
+++ b/JustBlog.WebApp/Areas/Blog/Views/Post/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -64,7 +64,7 @@
                     @Html.DisplayFor(modelItem => item.Modified)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Category.Id)
+                    @Html.DisplayFor(modelItem => item.Category.Name)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
