--- a/JustBlog.WebApp/Views/Shared/_MenuManagerPartial.cshtml
+++ b/JustBlog.WebApp/Views/Shared/_MenuManagerPartial.cshtml
@@ -16,10 +16,11 @@
                         <a class="dropdown-item text-dark"
                            asp-area="Admin" asp-controller="Role" asp-action="Index">Roles Manager</a>
                         <a class="dropdown-item text-dark"
+                           asp-area="Admin" asp-controller="User" asp-action="Index">User Manager</a>
+                        <a class="dropdown-item text-dark"
                            asp-area="Blog" asp-controller="Post" asp-action="Index">Post Manager</a>
                         <a class="dropdown-item text-dark"
-                           asp-area="Admin" asp-controller="User" asp-action="Index">User Manager</a>
-                        <a class="dropdown-item text-dark" asp-controller="LeaveAllocation" asp-action="ListEmployees">Employees</a>
+                           asp-area="Blog" asp-controller="Category" asp-action="Index">Category Manager</a>
                     </div>
                
             </li>
