--- a/JustBlog.WebApp/Areas/Blog/Views/Post/Index.cshtml
+++ b/JustBlog.WebApp/Areas/Blog/Views/Post/Index.cshtml
@@ -67,9 +67,13 @@
                     @Html.DisplayFor(modelItem => item.Category.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <form asp-action="Delete" asp-route-id="@item.Id" method="post">
+                        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this record?')">
+                            Delete
+                        </button>
+                    </form>
                 </td>
             </tr>
         }
