--- a/JustBlog.WebApp/Views/Shared/_MenuManagerPartial.cshtml
+++ b/JustBlog.WebApp/Views/Shared/_MenuManagerPartial.cshtml
@@ -8,7 +8,7 @@
 {
     if (User.IsInRole("Admin") || User.IsInRole("Contributor"))
     {
-        <li class="nav-item dropdown nav-link">
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Manage
             </a>
