--- a/JustBlog.WebApp/Views/Shared/_Layout.cshtml
+++ b/JustBlog.WebApp/Views/Shared/_Layout.cshtml
@@ -17,28 +17,28 @@
     <link href="~/cleanblog/css/styles.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-        <div class="container px-4 px-lg-5">
+    <nav class="navbar navbar-expand-lg navbar-light mt-3" id="mainNav">
+        <div class="container">
             <a class="navbar-brand" asp-controller="Post" asp-action="index">Just Blog</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            @*<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
-            </button>
+            </button>*@
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto py-4 py-lg-0">
+                <ul class="navbar-nav ms-auto nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link px-lg-3 py-3 py-lg-4"
+                        <a class="nav-link"
                            asp-controller="Post" asp-action="index">Home</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4">About</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4">Entity Framework</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">MVC</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4"></a></li>
-                    <li class="nav-item nav-link px-lg-3 py-3 py-lg-4">
+                    <li class="nav-item"><a class="nav-link ">About</a></li>    
+                    
+                         @RenderSection("CategorySideBar", false)
+
+                    <li class="nav-item"><a class="nav-link"></a></li>
+                   
                         @await Html.PartialAsync("_LoginPartial")
-                    </li>
-                    <li class="nav-item nav-link px-lg-3 py-3 py-lg-4">
+                    
+                    <li class="nav-item nav-link">
                         @await Html.PartialAsync("_MenuManagerPartial")
                     </li>
                 </ul>
